<resources>
    <string name="app_name">Kuchin_IP-84</string>
    <string name="title_info">Інформація про студента</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_graphics">Графіки</string>
    <string name="main_text">Кучін Владислав\nГрупа ІП-84\nІП-8415</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="graphic">Графік</string>
    <string name="diagram">Діаграма</string>
    <string name="title_books">Книги</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="no_items_found">No items found</string>
    <string name="ic_images">Зображення</string>
    <string name="title_images">Зображення</string>

</resources>